--- a/.github/ISSUE_TEMPLATE/add_app.yml
+++ b/.github/ISSUE_TEMPLATE/add_app.yml
@@ -1,7 +1,9 @@
 name: Add Application
 description: Suggest an application to be added to the Awesome Windows list
-labels: ["enhancement"]
+labels: ["Add"]
 title: "[ADD] "
+assignees:
+  - 0pandadev
 body:
   - type: markdown
     attributes:
