--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -37,13 +37,12 @@ jobs:
       - name: Summarize results
         if: always()
         run: |
-          echo "## Validation Results" >> $GITHUB_STEP_SUMMARY
           echo "### Checks" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo '```log' >> $GITHUB_STEP_SUMMARY
           python .github/scripts/checks.py >> $GITHUB_STEP_SUMMARY 2>&1
           echo '```' >> $GITHUB_STEP_SUMMARY
           echo "### Alphabetical Order Check" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo '```log' >> $GITHUB_STEP_SUMMARY
           python .github/scripts/check_sorting.py >> $GITHUB_STEP_SUMMARY 2>&1
           echo '```' >> $GITHUB_STEP_SUMMARY
 
