fix(convert): opensource icon when no link is provided

--- a/.github/workflows/covert_to_pr.yml
+++ b/.github/workflows/covert_to_pr.yml
@@ -55,7 +55,7 @@ jobs:
             if [ -n "$REPO_URL" ]; then
               OPEN_SOURCE_ICON="[![Open-Source Software][oss icon]]($REPO_URL)"
             else
-              OPEN_SOURCE_ICON="[![Open-Source Software][oss icon]]($APP_URL)"
+              OPEN_SOURCE_ICON="![Open-Source Software](opensource.svg)"
             fi
           else
             OPEN_SOURCE_ICON=""
