--- a/.github/ISSUE_TEMPLATE/edit_app.yml
+++ b/.github/ISSUE_TEMPLATE/edit_app.yml
@@ -66,26 +66,35 @@ body:
       label: New Category (if applicable)
       description: If you're proposing a category change, select the new category
       options:
+        - API Development
+        - Application Launchers
         - Audio
         - Backup
+        - Browsers
         - Chat Clients
+        - Cloud Storage
+        - Command Line Tools
         - Compression
-        - Customization
         - Data Recovery
-        - Developer Tools
-        - Documents
-        - E-Book Utilities
+        - Databases
+        - Developer Utilities
         - Email
+        - File Management
         - Games
         - Graphics
         - IDEs
-        - Online Storage
+        - Networking
+        - Office Suites
         - Productivity
         - Proxy and VPN Tools
+        - Screen Capture
+        - Security
+        - System Utilities
         - Terminal
         - Text Editors
-        - Utilities
+        - Version Control
         - Video
+        - Virtualization
         - Other (please specify in description)
 
   - type: checkboxes
