feat: Add Customization and Window Management options to application category

--- a/.github/ISSUE_TEMPLATE/add_app.yml
+++ b/.github/ISSUE_TEMPLATE/add_app.yml
@@ -44,6 +44,7 @@ body:
         - Cloud Storage
         - Command Line Tools
         - Compression
+        - Customization
         - Data Recovery
         - Databases
         - Developer Utilities
@@ -56,7 +57,9 @@ body:
         - Office Suites
         - Productivity
         - Proxy and VPN Tools
+        - Remote Access
         - Screen Capture
+        - Screenshot
         - Security
         - System Utilities
         - Terminal
@@ -64,6 +67,7 @@ body:
         - Version Control
         - Video
         - Virtualization
+        - Window Management
         - Other (please specify in description)
     validations:
       required: true
