fix: issue templates having wrong categories

--- a/.github/ISSUE_TEMPLATE/add_app.yml
+++ b/.github/ISSUE_TEMPLATE/add_app.yml
@@ -40,9 +40,9 @@ body:
         - Audio
         - Backup
         - Browsers
-        - Chat Clients
         - Cloud Storage
         - Command Line Tools
+        - Communication
         - Compression
         - Customization
         - Data Recovery
@@ -65,7 +65,7 @@ body:
         - Terminal
         - Text Editors
         - Version Control
-        - Video
+        - Video Utilities
         - Virtualization
         - Window Management
         - Other (please specify in description)
