--- a/.github/ISSUE_TEMPLATE/edit_app.yml
+++ b/.github/ISSUE_TEMPLATE/edit_app.yml
@@ -71,9 +71,9 @@ body:
         - Audio
         - Backup
         - Browsers
-        - Chat Clients
         - Cloud Storage
         - Command Line Tools
+        - Communication
         - Compression
         - Customization
         - Data Recovery
@@ -96,7 +96,7 @@ body:
         - Terminal
         - Text Editors
         - Version Control
-        - Video
+        - Video Utilities
         - Virtualization
         - Window Management
         - Other (please specify in description)
